Start Backend EJS Implementation

--- a/Code/JS/views/Login.ejs
+++ b/Code/JS/views/Login.ejs
@@ -86,7 +86,7 @@
                             </div>
                         </div>
                         <div class="field">
-                            <button class="button is-success">Log In</button>
+                            <button class="button is-success" id="loginbutton">Log In</button>
                         </div>
                     </div>
                 </div>
@@ -101,6 +101,7 @@
         menu.classList.toggle('is-active');
         });
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script src="JS/Login.js"></script>
 </body>
 
