Fix structure of directory

--- a/Code/public/css/main.css
+++ b/Code/public/css/main.css
@@ -6,21 +6,21 @@
 }
 
 .checkin-bg{
-    background-image: url('images/checkin.webp');
+    background-image: url("images/checkin.webp");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .checkout-bg{
-    background-image: url('images/checkout_bg.jpg');
+    background-image: url("images/checkout_bg.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .monthlypass-bg{
-    background-image: url('images/monthly_pass_bg.avif');
+    background-image: url("images/monthly_pass_bg.avif");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
