--- a/Code/views/OneTimeCheckIn.ejs
+++ b/Code/views/OneTimeCheckIn.ejs
@@ -13,7 +13,7 @@
     <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item" href="">
-                <img src="images/pesulogo.png" width="90" height="28">
+                <img src="/images/pesulogo.png" width="90" height="28">
             </a>
 
             <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
@@ -71,7 +71,7 @@
                     <div class="control has-icons-left">
                         <input id="SRN" type="text" class="input" placeholder="SRN">
                         <span class="icon is-small is-left">
-                            <img src="images/user.jpg" alt="">
+                            <img src="/images/user.jpg" alt="">
                         </span>
                     </div>
                 </div>
@@ -80,7 +80,7 @@
                     <div class="control has-icons-left">
                         <input id="name" type="text" class="input" placeholder="Name">
                         <span class="icon is-small is-left">
-                            <img src="images/name.jpg" alt="">
+                            <img src="/images/name.jpg" alt="">
                         </span>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                     <div class="control has-icons-left">
                         <input id="regno" type="text" class="input" placeholder="Registration Number">
                         <span class="icon is-small is-left">
-                            <img src="images/regno.png" alt="">
+                            <img src="/images/regno.png" alt="">
                         </span>
                     </div>
                 </div>
@@ -113,8 +113,8 @@
                         <div class="modal-content">
                             <div style="width:500px" class="box">
                                 <h1 class="title is-2">Spots Available</h1>
-                                <p><img style="display:inline;" src="images/bike.png" class="image is-32x32"> : <b><span id="bike_availability"></span></b></p>
-                                <p><img style="display: inline;" src="images/car.png" class="image is-32x32"> : <b><span id="car_availability"></span></b></p>
+                                <p><img style="display:inline;" src="/images/bike.png" class="image is-32x32"> : <b><span id="bike_availability"></span></b></p>
+                                <p><img style="display: inline;" src="/images/car.png" class="image is-32x32"> : <b><span id="car_availability"></span></b></p>
                             </div>
                         </div>
                         <button class="modal-close is-large" aria-label="close"></button>
@@ -131,7 +131,7 @@
             menu.classList.toggle('is-active');
         });
     </script>
-    <script src="JS/OneTimeCheckIn.js"></script>
+    <script src="js/OneTimeCheckIn.js"></script>
 </body>
 
 </html>
