--- a/Code/views/RegistrantCheckIn.ejs
+++ b/Code/views/RegistrantCheckIn.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monthly Pass Registration</title>
+    <title>Registrant Check In</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="main.css">
 </head>
@@ -12,7 +12,7 @@
     <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item" href="">
-                <img src="images/pesulogo.png" width="90" height="28">
+                <img src="/images/pesulogo.png" width="90" height="28">
             </a>
 
             <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
@@ -60,73 +60,34 @@
             </div>
         </div>
     </nav>
-    
+
     <div class="columns is-centered">
-        <div style="padding-top: 45px;" class="column is-4">
+        <div class="column is-4 vertical-align">
             <div class="box">
-                <h1 class="title is-3 has-text-info-dark">Monthly Pass Registration</h1>
+                <h1 class="title is-2 has-text-info-dark">Registrant Check In</h1>
                 <div class="field">
                     <label for="SRN" class="label">SRN</label>
                     <div class="control has-icons-left">
                         <input id="SRN" type="text" class="input" placeholder="SRN">
                         <span class="icon is-small is-left">
-                            <img src="images/user.jpg" alt="">
+                            <img src="/images/user.jpg" alt="">
                         </span>
                     </div>
                 </div>
                 <div class="field">
-                    <label for="name" class="label">Name</label>
+                    <label for="regno" class="label">Registration Number</label>
                     <div class="control has-icons-left">
-                        <input id="name" type="text" class="input" placeholder="Name">
+                        <input id="regno" type="text" class="input" placeholder="Registration Number">
                         <span class="icon is-small is-left">
-                            <img src="images/name.jpg" alt="">
+                            <img src="/images/regno.png" alt="">
                         </span>
                     </div>
                 </div>
-                <div class="field">
-                    <label for="mobno" class="label">Mobile Number</label>
-                    <div class="control has-icons-left">
-                        <input id="mobno" type="text" class="input" placeholder="Mobile Number">
-                        <span class="icon is-small is-left">
-                            <img src="images/phone.webp" alt="">
-                        </span>
-                    </div>
-                </div>
-                <div class="field">
-                    <label for="regnobike" class="label">Bike Registration Number</label>
-                    <div class="control has-icons-left">
-                        <input id="regnobike" type="text" class="input" placeholder="Bike Registration Number">
-                        <span class="icon is-small is-left">
-                            <img src="images/regno.png" alt="">
-                        </span>
-                    </div>
-                </div>
-                <div class="field">
-                    <label for="regnocar" class="label">Car Registration Number</label>
-                    <div class="control has-icons-left">
-                        <input id="regnocar" type="text" class="input" placeholder="Car Registration Number">
-                        <span class="icon is-small is-left">
-                            <img src="images/regno.png" alt="">
-                        </span>
-                    </div>
-                </div>
-                <div class="field">
-                    <div class="control">
-                        <label class="checkbox">
-                            <input type="checkbox" name="vehicle_type_two" id="twowheel" value="2">
-                            Two-Wheeler
-                        </label>
-                        <label class="checkbox">
-                            <input type="checkbox" name="vehicle_type_four" id="fourwheel" value="4">
-                            Four-Wheeler
-                        </label>
-                    </div>
-                </div>
-                <button class="button is-primary">Register New User</button>
+                <button class="button is-primary">Check In User</button>
             </div>
+
         </div>
     </div>
-
     <script>
         var burger = document.querySelector('.navbar-burger');
         var menu = document.querySelector('#' + burger.dataset.target);
