Connection to database successful

--- a/Code/views/Login.ejs
+++ b/Code/views/Login.ejs
@@ -65,7 +65,7 @@
         <div class="column is-two-fifths cover-div">
             <div class="columns is-centered">
                 <div class="column is-two-thirds vertical-align">
-                    <div class="box is-half">
+                    <div id="box" class="box is-half">
                         <h1 class="title is-2 has-text-info-dark">Log In</h1>
                         <div class="field">
                             <label for="AdminId" class="label">Faculty_ID</label>
