Add partials folder

--- a/Code/views/ReCheckIn.ejs
+++ b/Code/views/ReCheckIn.ejs
@@ -10,57 +10,7 @@
 </head>
 
 <body class="checkin-bg height-full">
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-            <a class="navbar-item" href="">
-                <img src="/images/pesulogo.png" width="90" height="28">
-            </a>
-
-            <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
-                data-target="burger-icon-collapse">
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-            </a>
-        </div>
-
-        <div id="burger-icon-collapse" class="navbar-menu">
-            <div class="navbar-end">
-                <div class="navbar-item has-dropdown is-hoverable">
-                    <a class="navbar-link is-arrowless">
-                        Check In
-                    </a>
-                    <div class="navbar-dropdown">
-                        <a href="" class="navbar-item">
-                            One Time Check In
-                        </a>
-                        <a href="" class="navbar-item">
-                            Re-Check In
-                        </a>
-                    </div>
-                </div>
-                <a href="" class="navbar-item">
-                    Check Out
-                </a>
-                <div class="navbar-item has-dropdown is-hoverable">
-                    <a class="navbar-link is-arrowless">
-                        Monthly Pass
-                    </a>
-                    <div class="navbar-dropdown">
-                        <a href="" class="navbar-item">
-                            Registrant Check In
-                        </a>
-                        <a href="" class="navbar-item">
-                            New Registrant Application
-                        </a>
-                    </div>
-                </div>
-                <a href="" class="navbar-item">
-                    Manage
-                </a>
-            </div>
-        </div>
-    </nav>
+    <%- include('partials/navbar.ejs') %>
 
     <div class="columns is-centered">
         <div class="column is-4 vertical-align">
