Fix Login Page Functionality

--- a/Code/public/css/main.css
+++ b/Code/public/css/main.css
@@ -36,6 +36,10 @@
 }
 
 .vertical-align{
-    padding-top:200px;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 
