--- a/Code/views/Login.ejs
+++ b/Code/views/Login.ejs
@@ -15,7 +15,7 @@
     <div class="columns">
         <div class="column is-two-fifths cover-div">
             <div class="columns is-centered">
-                <div class="column is-two-thirds vertical-align">
+                <div style="padding-top: 200px;" class="column is-two-thirds">
                     <div id="box" class="box is-half">
                         <h1 class="title is-2 has-text-info-dark">Log In</h1>
                         <div class="field">
