--- a/Code/views/NewRegistrant.ejs
+++ b/Code/views/NewRegistrant.ejs
@@ -12,7 +12,7 @@
     <%- include('partials/navbar.ejs') %>
     
     <div class="columns is-centered">
-        <div style="padding-top: 45px;" class="column is-4">
+        <div class="column is-4 vertical-align">
             <div class="box">
                 <h1 class="title is-3 has-text-info-dark">Monthly Pass Registration</h1>
                 <div class="field">
