--- a/Code/views/ReCheckIn.ejs
+++ b/Code/views/ReCheckIn.ejs
@@ -12,40 +12,44 @@
 <body class="checkin-bg height-full">
     <%- include('partials/navbar.ejs') %>
 
-    <div class="columns is-centered">
-        <div class="column is-4 vertical-align">
-            <div class="box">
-                <h1 class="title is-2 has-text-info-dark">Re-Check In</h1>
-                <div class="field">
-                    <label for="SRN" class="label">SRN</label>
-                    <div class="control has-icons-left">
-                        <input id="SRN" type="text" class="input" placeholder="SRN">
-                        <span class="icon is-small is-left">
-                            <img src="/images/user.jpg" alt="">
-                        </span>
+        <div class="columns is-centered">
+            <div class="column is-4 vertical-align">
+                <div id="box" class="box">
+                    <h1 class="title is-2 has-text-info-dark">Re-Check In</h1>
+                    <div class="field">
+                        <label for="SRN" class="label">SRN</label>
+                        <div class="control has-icons-left">
+                            <input id="SRN" type="text" class="input" placeholder="SRN">
+                            <span class="icon is-small is-left">
+                                <img src="/images/user.jpg" alt="">
+                            </span>
+                        </div>
+                    </div>
+                    <div class="field">
+                        <label for="regno" class="label">Registration Number</label>
+                        <div class="control has-icons-left">
+                            <input id="regno" type="text" class="input" placeholder="Registration Number">
+                            <span class="icon is-small is-left">
+                                <img src="/images/regno.png" alt="">
+                            </span>
+                        </div>
+                    </div>
+                    <div>
+                        <button id="permit-user" class="button is-primary">Permit User</button>
                     </div>
                 </div>
-                <div class="field">
-                    <label for="regno" class="label">Registration Number</label>
-                    <div class="control has-icons-left">
-                        <input id="regno" type="text" class="input" placeholder="Registration Number">
-                        <span class="icon is-small is-left">
-                            <img src="/images/regno.png" alt="">
-                        </span>
-                    </div>
-                </div>
-                <button class="button is-primary">Permit User</button>
             </div>
         </div>
-    </div>
-    <script>
-        var burger = document.querySelector('.navbar-burger');
-        var menu = document.querySelector('#' + burger.dataset.target);
-        burger.addEventListener('click', function () {
-            burger.classList.toggle('is-active');
-            menu.classList.toggle('is-active');
-        });
-    </script>
+        <script>
+            var burger = document.querySelector('.navbar-burger');
+            var menu = document.querySelector('#' + burger.dataset.target);
+            burger.addEventListener('click', function () {
+                burger.classList.toggle('is-active');
+                menu.classList.toggle('is-active');
+            });
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+        <script src="js/ReCheckIn.js"></script>
 </body>
 
 </html>
