Finish CheckOut Page Functionality

--- a/Code/views/CheckOut.ejs
+++ b/Code/views/CheckOut.ejs
@@ -13,7 +13,7 @@
 
     <div class="columns is-centered">
         <div class="column is-4 vertical-align">
-            <div class="box">
+            <div id="box" class="box">
                 <h1 class="title is-2 has-text-info-dark">Check Out</h1>
                 <div class="field">
                     <label for="SRN" class="label">SRN</label>
@@ -33,7 +33,7 @@
                         </span>
                     </div>
                 </div>
-                <button class="button is-danger">Remove User</button>
+                <button id="remove-button" class="button is-danger">Remove User</button>
             </div>
         </div>
     </div>
@@ -45,5 +45,7 @@
             menu.classList.toggle('is-active');
         });
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <script src="js/CheckOut.js"></script>
 </body>
 </html>
