--- a/Code/public/css/main.css
+++ b/Code/public/css/main.css
@@ -33,8 +33,8 @@
     background-size: cover;
 }
 
-.green{
-    background-color: rgb(90, 229, 95);
+.white{
+    background-color: white;
 }
 
 .height-full{
