--- a/Code/views/AddAdmin.ejs
+++ b/Code/views/AddAdmin.ejs
@@ -11,59 +11,72 @@
 
 <body class="height-full manage-bg">
     <%- include('partials/navbar.ejs') %>
-        <div class="tabs is-boxed green">
-            <ul>
-                <li class="is-active"><a>Add Admin</a></li>
-                <li><a>Remove Admin</a></li>
-                <li><a>Add Security</a></li>
-                <li><a>Remove Security</a></li>
-            </ul>
-        </div>
-        <div class="columns is-centered">
-            <div class="column is-4 vertical-align">
-                <div class="box">
-                    <h1 class="title is-3 has-text-info-dark">Add Admin</h1>
-                    <div class="field">
-                        <label for="adminId" class="label">Admin ID</label>
-                        <div class="control has-icons-left">
-                            <input id="adminId" type="text" class="input" placeholder="Admin ID">
-                            <span class="icon is-small is-left">
-                                <img src="/images/user.jpg" alt="">
-                            </span>
+        <div class="columns">
+            <div class="column is-2">
+                <aside class="menu white height-full">
+                    <p class="menu-label">
+                        Administrator
+                    </p>
+                    <ul class="menu-list">
+                        <li><a class="is-active">Add Administrator</a></li>
+                        <li><a>Remove Administrator</a></li>
+                    </ul>
+                    <p class="menu-label">
+                        Security
+                    </p>
+                    <ul class="menu-list">
+                        <li><a>Add Security</a></li>
+                        <li><a>Remove Security</a></li>
+                    </ul>
+                </aside>
+            </div>
+            <div class="column">
+                <div class="columns is-centered">
+                    <div class="column is-4 vertical-align">
+                        <div class="box">
+                            <h1 class="title is-3 has-text-info-dark">Add Admin</h1>
+                            <div class="field">
+                                <label for="adminId" class="label">Admin ID</label>
+                                <div class="control has-icons-left">
+                                    <input id="adminId" type="text" class="input" placeholder="Admin ID">
+                                    <span class="icon is-small is-left">
+                                        <img src="/images/user.jpg" alt="">
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="field">
+                                <label for="name" class="label">Name</label>
+                                <div class="control has-icons-left">
+                                    <input id="name" type="text" class="input" placeholder="Name">
+                                    <span class="icon is-small is-left">
+                                        <img src="/images/name.jpg" alt="">
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="field">
+                                <label for="pswd" class="label">Password</label>
+                                <div class="control has-icons-left">
+                                    <input id="pswd" type="text" class="input" placeholder="Password">
+                                    <span class="icon is-small is-left">
+                                        <img src="/images/lock.png" alt="">
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="field">
+                                <label for="mobno" class="label">Mobile Number</label>
+                                <div class="control has-icons-left">
+                                    <input id="mobno" type="text" class="input" placeholder="Mobile Number">
+                                    <span class="icon is-small is-left">
+                                        <img src="/images/phone.webp" alt="">
+                                    </span>
+                                </div>
+                            </div>
+                            <button class="button is-primary">Add new Admin</button>
                         </div>
                     </div>
-                    <div class="field">
-                        <label for="name" class="label">Name</label>
-                        <div class="control has-icons-left">
-                            <input id="name" type="text" class="input" placeholder="Name">
-                            <span class="icon is-small is-left">
-                                <img src="/images/name.jpg" alt="">
-                            </span>
-                        </div>
-                    </div>
-                    <div class="field">
-                        <label for="pswd" class="label">Password</label>
-                        <div class="control has-icons-left">
-                            <input id="pswd" type="text" class="input" placeholder="Password">
-                            <span class="icon is-small is-left">
-                                <img src="/images/lock.png" alt="">
-                            </span>
-                        </div>
-                    </div>
-                    <div class="field">
-                        <label for="mobno" class="label">Mobile Number</label>
-                        <div class="control has-icons-left">
-                            <input id="mobno" type="text" class="input" placeholder="Mobile Number">
-                            <span class="icon is-small is-left">
-                                <img src="/images/phone.webp" alt="">
-                            </span>
-                        </div>
-                    </div>
-                    <button class="button is-primary">Add new Admin</button>
                 </div>
             </div>
         </div>
-
 </body>
 
 </html>
