Finish Remove Security Page FrontEnd + Fix Up Add Admin and Security Pages

--- a/Code/views/AddAdmin.ejs
+++ b/Code/views/AddAdmin.ejs
@@ -19,7 +19,6 @@
                     </p>
                     <ul class="menu-list">
                         <li><a class="is-active">Add Administrator</a></li>
-                        <li><a>Remove Administrator</a></li>
                     </ul>
                     <p class="menu-label">
                         Security
@@ -68,6 +67,15 @@
                                     <input id="mobno" type="text" class="input" placeholder="Mobile Number">
                                     <span class="icon is-small is-left">
                                         <img src="/images/phone.webp" alt="">
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="field">
+                                <label for="adminPswd" class="label">Granter's Admin Password</label>
+                                <div class="control has-icons-left">
+                                    <input id="adminPswd" type="password" class="input" placeholder="Admin Password">
+                                    <span class="icon is-small is-left">
+                                        <img src="/images/lock.png" alt="">
                                     </span>
                                 </div>
                             </div>
