Finish Manage Connectivity

--- a/Code/views/AddSecurity.ejs
+++ b/Code/views/AddSecurity.ejs
@@ -18,14 +18,14 @@
                         Administrator
                     </p>
                     <ul class="menu-list">
-                        <li><a>Add Administrator</a></li>
+                        <li><a href="/ManageAdmin">Add Administrator</a></li>
                     </ul>
                     <p class="menu-label">
                         Security
                     </p>
                     <ul class="menu-list">
-                        <li><a class="is-active">Add Security</a></li>
-                        <li><a>Remove Security</a></li>
+                        <li><a href="/AddSecurity" class="is-active">Add Security</a></li>
+                        <li><a href="/RemoveSecurity">Remove Security</a></li>
                     </ul>
                 </aside>
             </div>
