--- a/Code/views/RemoveSecurity.ejs
+++ b/Code/views/RemoveSecurity.ejs
@@ -17,14 +17,14 @@
                         Administrator
                     </p>
                     <ul class="menu-list">
-                        <li><a>Add Administrator</a></li>
+                        <li><a href="/ManageAdmin">Add Administrator</a></li>
                     </ul>
                     <p class="menu-label">
                         Security
                     </p>
                     <ul class="menu-list">
-                        <li><a>Add Security</a></li>
-                        <li><a class="is-active">Remove Security</a></li>
+                        <li><a href="/AddSecurity">Add Security</a></li>
+                        <li><a href="/RemoveSecurity" class="is-active">Remove Security</a></li>
                     </ul>
                 </aside>
             </div>
