--- a/Code/views/partials/navbar.ejs
+++ b/Code/views/partials/navbar.ejs
@@ -43,7 +43,7 @@
                     </a>
                 </div>
             </div>
-            <a href="" class="navbar-item">
+            <a href="/ManageAdmin" class="navbar-item">
                 Manage
             </a>
         </div>
