Finish AddAdmin BackEnd Functionality

--- a/Code/views/AddAdmin.ejs
+++ b/Code/views/AddAdmin.ejs
@@ -32,7 +32,7 @@
             <div class="column">
                 <div class="columns is-centered">
                     <div class="column is-4 vertical-align">
-                        <div class="box">
+                        <div id="box" class="box">
                             <h1 class="title is-3 has-text-info-dark">Add Admin</h1>
                             <div class="field">
                                 <label for="adminId" class="label">Admin ID</label>
@@ -79,12 +79,14 @@
                                     </span>
                                 </div>
                             </div>
-                            <button class="button is-primary">Add new Admin</button>
+                            <button id="add-button" class="button is-primary">Add new Admin</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+        <script src="js/AddAdmin.js"></script>
 </body>
 
 </html>
