Finish Update Monthly Pass FrontEnd and BackEnd Functionality

--- a/Code/views/AddAdmin.ejs
+++ b/Code/views/AddAdmin.ejs
@@ -26,6 +26,12 @@
                     <ul class="menu-list">
                         <li><a href="/AddSecurity">Add Security</a></li>
                     </ul>
+                    <p class="menu-label">
+                        MonthlyPass
+                    </p>
+                    <ul class="menu-list">
+                        <li><a href="/UpdateMonthlyPass">Update MonthlyPass</a></li>
+                    </ul>
                 </aside>
             </div>
             <div class="column">
